# docs/openapi.json
@@ -42,49 +42,104 @@
   }, {
     "name" : "Smart-Meter",
     "description" : "Operations about Smart-Meter data"
-  }, {
-    "name" : "User",
-    "description" : "User Operations"
   } ],
   "paths" : {
-    "/auth/login" : {
+    "/api/v1/auth/login" : {
       "post" : {
         "tags" : [ "Authorization" ],
-        "operationId" : "login",
+        "summary" : "Login",
+        "description" : "Login with given credentials",
+        "operationId" : "loginUser",
         "requestBody" : {
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/LayblarUser"
+                "$ref" : "#/components/schemas/LoginUserDTO"
               }
             }
           }
         },
         "responses" : {
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Invalid User"
+          },
+          "500" : {
+            "description" : "Server Error"
+          },
           "200" : {
-            "description" : "OK"
+            "description" : "The logged in user",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "properties" : {
+                    "username" : {
+                      "type" : "string"
+                    },
+                    "password" : {
+                      "type" : "string"
+                    }
+                  }
+                }
+              }
+            }
           }
-        }
+        },
+        "security" : [ {
+          "none" : [ ]
+        } ]
       }
     },
-    "/auth/register" : {
+    "/api/v1/auth/register" : {
       "post" : {
         "tags" : [ "Authorization" ],
-        "operationId" : "register",
+        "summary" : "Register a new UserAccount",
+        "description" : "Creates a new user and assigns them to a new Household",
+        "operationId" : "createUser",
         "requestBody" : {
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/LayblarUser"
+                "$ref" : "#/components/schemas/RegisterUserDTO"
               }
             }
           }
         },
         "responses" : {
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Invalid User"
+          },
+          "500" : {
+            "description" : "Server Error"
+          },
           "200" : {
-            "description" : "OK"
+            "description" : "The registered user",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "object",
+                  "properties" : {
+                    "password" : {
+                      "type" : "string"
+                    },
+                    "email" : {
+                      "type" : "string"
+                    }
+                  }
+                }
+              }
+            }
           }
-        }
+        },
+        "security" : [ {
+          "none" : [ ]
+        } ]
       }
     },
     "/deviceLibrary" : {
@@ -630,7 +685,7 @@
       }
     },
     "/label" : {
-      "put" : {
+      "post" : {
         "tags" : [ "Label" ],
         "summary" : "Create a Label",
         "description" : "Create a Label",
@@ -639,7 +694,7 @@
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/LabelDTO"
+                "$ref" : "#/components/schemas/CreateLabelDTO"
               }
             }
           }
@@ -664,7 +719,7 @@
                 "schema" : {
                   "type" : "array",
                   "items" : {
-                    "$ref" : "#/components/schemas/LabelDTO"
+                    "$ref" : "#/components/schemas/CreateLabelDTO"
                   }
                 }
               }
@@ -676,82 +731,16 @@
         } ]
       }
     },
-    "/label/project/{projectId}" : {
+    "/label/{householdId}" : {
       "get" : {
         "tags" : [ "Label" ],
-        "summary" : "Get Labels",
-        "description" : "Get a List of Labels from the specified time frame",
-        "operationId" : "getProjectLabels",
+        "summary" : "Returns a list of labels",
+        "description" : "Returns a list of labels for the specific household",
+        "operationId" : "getLabelsByHousehold",
         "parameters" : [ {
-          "name" : "projectId",
+          "name" : "householdId",
           "in" : "path",
-          "description" : "The id of the project for which the data should be fetched",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "from",
-          "in" : "query",
-          "description" : "The begin of the time intervall for which the data should be fetched. Needs to be a Unix Timestamp as String",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "to",
-          "in" : "query",
-          "description" : "The end of the time intervall for which the data should be fetched. Needs to be a Unix Timestamp as String",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "401" : {
-            "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Invalid User"
-          },
-          "500" : {
-            "description" : "Server Error"
-          },
-          "400" : {
-            "description" : "Missing Query Parameters"
-          },
-          "422" : {
-            "description" : "Wrong Date Format"
-          },
-          "200" : {
-            "description" : "Labels for the specified time period",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "array",
-                  "items" : {
-                    "$ref" : "#/components/schemas/LabelDTO"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "security" : [ {
-          "jwt" : [ ]
-        } ]
-      }
-    },
-    "/label/{labelId}" : {
-      "get" : {
-        "tags" : [ "Label" ],
-        "summary" : "Returns a Label",
-        "description" : "Returns the Label with the specified id",
-        "operationId" : "getLabel",
-        "parameters" : [ {
-          "name" : "labelId",
-          "in" : "path",
-          "description" : "The id of the label for which the data should be fetched",
+          "description" : "The id of the household for which the data should be fetched",
           "required" : true,
           "schema" : {
             "type" : "string"
@@ -767,33 +756,27 @@
           "500" : {
             "description" : "Server Error"
           },
-          "404" : {
-            "description" : "No label found"
-          },
           "200" : {
-            "description" : "Label by id",
+            "description" : "Label by Household",
             "content" : {
               "application/json" : {
                 "schema" : {
                   "type" : "object",
                   "properties" : {
-                    "id" : {
+                    "labelId" : {
                       "type" : "string"
                     },
-                    "startDate" : {
+                    "householdId" : {
                       "type" : "string"
                     },
-                    "endDate" : {
+                    "smartMeterData" : {
+                      "$ref" : "#/components/schemas/SmartMeterDataDTO1"
+                    },
+                    "label" : {
                       "type" : "string"
                     },
-                    "deviceId" : {
-                      "type" : "string"
-                    },
-                    "projectId" : {
-                      "type" : "string"
-                    },
-                    "userId" : {
-                      "type" : "string"
+                    "createdAt" : {
+                      "$ref" : "#/components/schemas/LocalDateTime"
                     }
                   }
                 }
@@ -1029,7 +1012,7 @@
         } ]
       }
     },
-    "/project/project/{projectId}/join" : {
+    "/project/project/{projectId}/join/{userId}" : {
       "post" : {
         "tags" : [ "Project" ],
         "summary" : "Join a Project",
@@ -1043,16 +1026,15 @@
           "schema" : {
             "type" : "string"
           }
-        } ],
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/UserDTO"
-              }
-            }
+        }, {
+          "name" : "userId",
+          "in" : "path",
+          "description" : "The ID of the user that wants to join the project",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
           }
-        },
+        } ],
         "responses" : {
           "401" : {
             "description" : "Unauthorized"
@@ -1082,67 +1064,7 @@
         } ]
       }
     },
-    "/project/project/{projectId}/label" : {
-      "get" : {
-        "tags" : [ "Project" ],
-        "summary" : "Get Labels for a Project",
-        "description" : "Get Labels for a Project",
-        "operationId" : "getProjectLabels",
-        "parameters" : [ {
-          "name" : "projectId",
-          "in" : "path",
-          "description" : "The ID of the project to get labels for",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "from",
-          "in" : "query",
-          "description" : "The begin of the time intervall for which the data should be fetched. Needs to be a Unix Timestamp as String",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "to",
-          "in" : "query",
-          "description" : "The end of the time intervall for which the data should be fetched. Needs to be a Unix Timestamp as String",
-          "required" : false,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "401" : {
-            "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Invalid User"
-          },
-          "500" : {
-            "description" : "Server Error"
-          },
-          "200" : {
-            "description" : "Labels for the specified time period for given project",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "array",
-                  "items" : {
-                    "$ref" : "#/components/schemas/LabelDTO"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "security" : [ {
-          "jwt" : [ ]
-        } ]
-      }
-    },
-    "/project/researcher}" : {
+    "/project/researcher" : {
       "post" : {
         "tags" : [ "Project" ],
         "summary" : "Create a Researcher",
@@ -1259,148 +1181,27 @@
           "jwt" : [ ]
         } ]
       }
-    },
-    "/user/login" : {
-      "post" : {
-        "tags" : [ "User" ],
-        "summary" : "Login",
-        "description" : "Login with given credentials",
-        "operationId" : "loginUser",
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/UserDTO"
-              }
-            }
-          }
-        },
-        "responses" : {
-          "401" : {
-            "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Invalid User"
-          },
-          "500" : {
-            "description" : "Server Error"
-          },
-          "200" : {
-            "description" : "The logged in user",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "object",
-                  "properties" : {
-                    "username" : {
-                      "type" : "string"
-                    },
-                    "password" : {
-                      "type" : "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "security" : [ {
-          "none" : [ ]
-        } ]
-      }
-    },
-    "/user/logout" : {
-      "post" : {
-        "tags" : [ "User" ],
-        "summary" : "Logout",
-        "description" : "Logout with given credentials",
-        "operationId" : "logoutUser",
-        "responses" : {
-          "401" : {
-            "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Invalid User"
-          },
-          "500" : {
-            "description" : "Server Error"
-          },
-          "200" : {
-            "description" : "The logged out user",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "object",
-                  "properties" : {
-                    "username" : {
-                      "type" : "string"
-                    },
-                    "password" : {
-                      "type" : "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "security" : [ {
-          "jwt" : [ ]
-        } ]
-      }
-    },
-    "/user/register" : {
-      "post" : {
-        "tags" : [ "User" ],
-        "summary" : "Register a new UserAccount",
-        "description" : "Creates a new user and assigns them to a new Household",
-        "operationId" : "createUser",
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/UserDTO"
-              }
-            }
-          }
-        },
-        "responses" : {
-          "401" : {
-            "description" : "Unauthorized"
-          },
-          "403" : {
-            "description" : "Invalid User"
-          },
-          "500" : {
-            "description" : "Server Error"
-          },
-          "200" : {
-            "description" : "The registered user",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "object",
-                  "properties" : {
-                    "username" : {
-                      "type" : "string"
-                    },
-                    "password" : {
-                      "type" : "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "security" : [ {
-          "none" : [ ]
-        } ]
-      }
     }
   },
   "components" : {
     "schemas" : {
+      "CreateLabelDTO" : {
+        "type" : "object",
+        "properties" : {
+          "label" : {
+            "type" : "string"
+          },
+          "labelData" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/SmartMeterDataDTO1"
+            }
+          },
+          "labelMetaData" : {
+            "$ref" : "#/components/schemas/LabelMetaDataDTO"
+          }
+        }
+      },
       "DeviceDTO" : {
         "type" : "object",
         "properties" : {
@@ -1422,46 +1223,14 @@
           }
         }
       },
-      "LabelDTO" : {
+      "LabelMetaDataDTO" : {
         "type" : "object",
         "properties" : {
-          "id" : {
+          "householdMetaData" : {
             "type" : "string"
           },
-          "startDate" : {
+          "deviceMetaData" : {
             "type" : "string"
-          },
-          "endDate" : {
-            "type" : "string"
-          },
-          "deviceId" : {
-            "type" : "string"
-          },
-          "projectId" : {
-            "type" : "string"
-          },
-          "userId" : {
-            "type" : "string"
-          }
-        }
-      },
-      "LayblarUser" : {
-        "type" : "object",
-        "properties" : {
-          "userId" : {
-            "type" : "string"
-          },
-          "username" : {
-            "type" : "string"
-          },
-          "password" : {
-            "type" : "string"
-          },
-          "roles" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
           }
         }
       },
@@ -1469,6 +1238,17 @@
         "format" : "date-time",
         "type" : "string",
         "example" : "2022-03-10T12:15:50"
+      },
+      "LoginUserDTO" : {
+        "type" : "object",
+        "properties" : {
+          "username" : {
+            "type" : "string"
+          },
+          "password" : {
+            "type" : "string"
+          }
+        }
       },
       "ProjectDTO" : {
         "type" : "object",
@@ -1489,6 +1269,17 @@
             "type" : "string"
           },
           "researcherId" : {
+            "type" : "string"
+          }
+        }
+      },
+      "RegisterUserDTO" : {
+        "type" : "object",
+        "properties" : {
+          "password" : {
+            "type" : "string"
+          },
+          "email" : {
             "type" : "string"
           }
         }
@@ -1591,14 +1382,66 @@
           }
         }
       },
-      "UserDTO" : {
+      "SmartMeterDataDTO1" : {
         "type" : "object",
         "properties" : {
-          "username" : {
+          "time" : {
+            "$ref" : "#/components/schemas/LocalDateTime"
+          },
+          "sensorId" : {
             "type" : "string"
           },
-          "password" : {
-            "type" : "string"
+          "1.7.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "1.8.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "2.7.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "2.8.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "3.8.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "4.8.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "16.7.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "31.7.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "32.7.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "51.7.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "52.7.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "71.7.0" : {
+            "format" : "float",
+            "type" : "number"
+          },
+          "72.7.0" : {
+            "format" : "float",
+            "type" : "number"
           }
         }
       }
