# gateway/src/main/java/at/fhv/layblar/authentication/model/RegisterUserDTO.java
@@ -1,0 +1,8 @@
+package at.fhv.layblar.authentication.model;
+
+public class RegisterUserDTO {
+
+    public String password;
+    public String email;
+    
+}
