# labelservice/src/main/java/at/fhv/layblar/application/dto/CreateLabelDTO.java
@@ -1,0 +1,11 @@
+package at.fhv.layblar.application.dto;
+
+import java.util.List;
+
+public class CreateLabelDTO {
+
+    public String label;
+    public List<SmartMeterDataDTO> labelData;
+    public LabelMetaDataDTO labelMetaData;
+
+}
