# labelservice/src/main/java/at/fhv/layblar/application/dto/LabelMetaDataDTO.java
@@ -1,0 +1,8 @@
+package at.fhv.layblar.application.dto;
+
+public class LabelMetaDataDTO {
+
+    public String householdMetaData;
+    public String deviceMetaData;
+
+}
